[Elegant Theme] - ADDED: variables; Input interfaces; landing zone graphics;

--- a/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.html
+++ b/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.html
@@ -1,5 +1,7 @@
-<div
-  *ngIf="page && page.subCollections?.photos?.length"
-  class="photo"
-  [ngStyle]="{ 'background-image': 'url(' + page.subCollections.photos[0].url + ')' }"
-></div>
+<div class="landing-zone-container ">
+  <div *ngIf="photos?.length" class="photo" [ngStyle]="{ 'background-image': 'url(' + photos[0].url + ')' }"></div>
+  <div class="cont-intro-text" *ngIf="contents?.length">
+    <div class="first-intro-text" [innerHTML]="contents[0].value"></div>
+    <div *ngIf="contents?.length > 1" class="second-intro-text" [innerHTML]="contents[1].value"></div>
+  </div>
+</div>
