--- a/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.scss
+++ b/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.scss
@@ -1,3 +1,29 @@
-.photo {
+@import './../../../variables';
+
+.landing-zone-container {
+  position: relative;
   height: 100vh;
+  .photo {
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .cont-intro-text {
+    position: absolute;
+    top: calc(100% / 3);
+    left: 10%;
+    z-index: 1;
+    .first-intro-text > * {
+      margin: 0;
+      color: $text-primary-webapp-color;
+      @include fontSizeH1ByMedia();
+      position: relative;
+    }
+    .second-intro-text > * {
+      margin: 0;
+      color: $text-primary-webapp-color;
+      @include fontSizeParagraphByMedia();
+      text-align: right;
+    }
+  }
 }
