--- a/projects/elegant-theme/src/lib/components/header/header.component.scss
+++ b/projects/elegant-theme/src/lib/components/header/header.component.scss
@@ -1,10 +1,9 @@
 @import './../../../variables';
 @import './../../../mixin';
 
-
-.landing-zone-container {
+.header-container {
   position: relative;
-  height: 100vh;
+  height: 50vh;
   .photo {
     height: 100%;
     background-repeat: no-repeat;
