[Elegant Theme] - ADDED: - angular material; - material style; - photo gallery dialog component; - styles.scss; DISABLED: -ivy (temporary);

--- a/projects/elegant-theme/src/lib/components/header/header.component.scss
+++ b/projects/elegant-theme/src/lib/components/header/header.component.scss
@@ -1,5 +1,4 @@
-@import './../../../variables';
-@import './../../../mixin';
+@import './../../../styles.scss';
 
 .header-container {
   position: relative;
