--- a/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.scss
+++ b/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.scss
@@ -1,6 +1,4 @@
-@import './../../../variables';
-@import './../../../mixin';
-
+@import './../../../styles.scss';
 
 .landing-zone-container {
   position: relative;
