--- a/projects/elegant-theme/src/lib/components/photo-gallery-dialog/photo-gallery-dialog.component.html
+++ b/projects/elegant-theme/src/lib/components/photo-gallery-dialog/photo-gallery-dialog.component.html
@@ -11,10 +11,10 @@
     <div class="overlay-nav-button">
       <div class="cont-nav-button">
         <button mat-icon-button (click)="navigatePhoto('-')" [disabled]="index === 0">
-          <mat-icon>arrow_back_ios</mat-icon>
+          <mat-icon>keyboard_arrow_left</mat-icon>
         </button>
         <button mat-icon-button (click)="navigatePhoto('+')" [disabled]="index === photos?.length - 1">
-          <mat-icon>arrow_forward_ios</mat-icon>
+          <mat-icon>keyboard_arrow_right</mat-icon>
         </button>
       </div>
     </div>
