--- a/projects/elegant-theme/src/material-custom-theme.scss
+++ b/projects/elegant-theme/src/material-custom-theme.scss
@@ -2,7 +2,7 @@
 // @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 @import '~@angular/material/theming';
-@import '~material-design-icons/iconfont/material-icons.css';
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
