--- a/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.scss
+++ b/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.scss
@@ -7,6 +7,7 @@
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
   }
   .cont-intro-text {
     position: absolute;
