[Elegant Theme] - FIXED: header graphics

--- a/projects/elegant-theme/src/lib/components/header/header.component.scss
+++ b/projects/elegant-theme/src/lib/components/header/header.component.scss
@@ -6,6 +6,7 @@
   .photo {
     height: 100%;
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
   }
   .cont-intro-text {
