[Elegant Theme] - MODIFIED: height in percent insted of vh;

--- a/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.scss
+++ b/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.scss
@@ -2,7 +2,7 @@
 
 .landing-zone-container {
   position: relative;
-  height: 100vh;
+  height: 100%;
   .photo {
     height: 100%;
     background-repeat: no-repeat;
