--- a/projects/elegant-theme/src/lib/components/header/header.component.scss
+++ b/projects/elegant-theme/src/lib/components/header/header.component.scss
@@ -2,7 +2,7 @@
 
 .header-container {
   position: relative;
-  height: 50vh;
+  height: 50%;
   .photo {
     height: 100%;
     background-repeat: no-repeat;
