[Elegant Theme] - CHANGED: css encapsulation;

--- a/projects/elegant-theme/src/lib/components/header/header.component.scss
+++ b/projects/elegant-theme/src/lib/components/header/header.component.scss
@@ -9,7 +9,7 @@
     background-position: center;
     background-size: cover;
   }
-  .cont-intro-text {
+  ::ng-deep .cont-intro-text {
     position: absolute;
     top: calc(100% / 3);
     left: 10%;
