--- a/projects/elegant-theme/src/lib/components/landing-zone/edit/landing-zone-edit.component.html
+++ b/projects/elegant-theme/src/lib/components/landing-zone/edit/landing-zone-edit.component.html
@@ -1,3 +1,10 @@
-<div class="landing-zone-edit-container">
-  <p>edit landing zone</p>
+<div class="landing-zone-edit-container flex-column">
+  <div class="flex-row content-row">
+    <div class="flex-column">
+      <button mat-raised-button>Action</button>
+    </div>
+    <div class="flex-column">
+      <img *ngIf="photos && photos[0]"  [src]="photos[0].url" alt="" />
+    </div>
+  </div>
 </div>
