--- a/projects/elegant-theme/src/lib/components/landing-zone/edit/landing-zone-edit.component.scss
+++ b/projects/elegant-theme/src/lib/components/landing-zone/edit/landing-zone-edit.component.scss
@@ -2,6 +2,9 @@
 
 .landing-zone-edit-container {
   position: relative;
-  height: 80vh;
-  width: 80vw;
+  height: 100%;
+  width: 100%;
+  .content-row {
+    justify-content: center;
+  }
 }
