--- a/projects/elegant-theme/src/lib/components/landing-zone/edit/landing-zone-edit.component.scss
+++ b/projects/elegant-theme/src/lib/components/landing-zone/edit/landing-zone-edit.component.scss
@@ -5,6 +5,16 @@
   height: 100%;
   width: 100%;
   .content-row {
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 40%;
+    padding: 2%;
+    border-bottom: 2px solid white;
+    .cont-image {
+      height: 100%;
+      .background-image {
+        max-height: 100%;
+      }
+    }
   }
 }
