--- a/projects/elegant-theme/src/lib/components/landing-zone/edit/landing-zone-edit.component.scss
+++ b/projects/elegant-theme/src/lib/components/landing-zone/edit/landing-zone-edit.component.scss
@@ -12,8 +12,10 @@
     border-bottom: 2px solid white;
     .cont-image {
       height: 100%;
+      width: 50%;
       .background-image {
-        max-height: 100%;
+        width: 100%;
+        height: auto;
       }
     }
   }
