--- a/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.scss
+++ b/projects/elegant-theme/src/lib/components/landing-zone/landing-zone.component.scss
@@ -2,13 +2,34 @@
 
 .landing-zone-container {
   position: relative;
-  height: 100%;
+  height: 100vh;
+  overflow: hidden;
   .photo {
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
+
+  .default-icon {
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    background: #d8d8d8;
+    font-size: calc(8vw + 8vh);
+    color: #4a4a4a;
+  }
+
+  &.preview {
+    height: 100%;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    .default-icon {
+      font-size: calc(4vw + 4vh);
+    }
+  }
+
   .cont-intro-text {
     position: absolute;
     top: calc(100% / 3);
